# cogu-agent

./: .gitignore  CHANGELOG.md  COGU-AGENT-ANALYSIS.md  COGU-Loong.spec  COGU-v0.4.0-merge-report.md  FIXES-SUMMARY.md  PORTS.md  README.md  RELEASE_NOTES.md  USAGE.md  build_windows.bat  cogu-vs-openclaw-opencode.html  config.example.json  inno_stderr.txt  inno_stdout.txt  installer-inno.iss  installer-simple.iss  installer-v2.iss  installer.nsi  pyinstaller_log.txt  pyproject.toml  quick-start.bat  start-cogu.bat  start-cogu.sh  test_e2e.py
cogu/: __init__.py  __main__.py
cogu/api/: __init__.py  claude.py  client.py
cogu/app/: __init__.py  _app.py  _lifespan.py  deps.py
cogu/builders/: __init__.py  base.py  code_builder.py  requirements_utils.py
cogu/cli/: enhanced_cli.py  main.py
cogu/comm/: __init__.py  agent_protocol.py  agent_runtime.py  backend.py  dingtalk_adapter.py  grpc_backend.py  http_backend.py  manager.py  matrix_backend.py  multi_channel.py  voice_mode.py  ws_backend.py  zero_cost.py
cogu/compression/: __init__.py  context_engine.py  pipeline.py
cogu/config/: __init__.py  manager.py  settings.py
cogu/core/: __init__.py  agent.py  agent_registry.py  api_config.py  cancellation.py  checkpoint.py  component_agent.py  compose_flow.py  context_compactor.py  context_rebuilder.py  cosight_plan.py  crew_orchestrator.py  ego.py  (+33 more)
loong-desktop/: launch.bat  make_ico.py  package-lock.json  package.json  start-backend.bat  test-main.js  tsconfig.main.json
pangu-model/: README.md  README_EN.md  checklist.chk  config.json  generation_config.json  modeling_openpangu_dense.py  modular_openpangu_dense.py  pangu_inference.py
skills/: .skills_store_lock.json  MANIFEST.md
studio-ui/: index.html  package-lock.json  package.json
test-electron-clean/: main.js
tests/: test_e2e_skills.py
(+902 files in other folders)
